libqt6c/src/libqsharedmemory.hpp

#pragma once
#ifndef SRCC_LIBQSHAREDMEMORY_HPP
#define SRCC_LIBQSHAREDMEMORY_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSharedMemory QSharedMemory;
typedef struct QTimerEvent QTimerEvent;
#endif

QSharedMemory* QSharedMemory_new();
QSharedMemory* QSharedMemory_new2(const libqt_string key);
QSharedMemory* QSharedMemory_new3(QObject* parent);
QSharedMemory* QSharedMemory_new4(const libqt_string key, QObject* parent);
QMetaObject* QSharedMemory_MetaObject(const QSharedMemory* self);
void* QSharedMemory_Metacast(QSharedMemory* self, const char* param1);
int QSharedMemory_Metacall(QSharedMemory* self, int param1, int param2, void** param3);
void QSharedMemory_SetKey(QSharedMemory* self, const libqt_string key);
libqt_string QSharedMemory_Key(const QSharedMemory* self);
void QSharedMemory_SetNativeKey(QSharedMemory* self, const libqt_string key);
libqt_string QSharedMemory_NativeKey(const QSharedMemory* self);
bool QSharedMemory_Create(QSharedMemory* self, ptrdiff_t size);
ptrdiff_t QSharedMemory_Size(const QSharedMemory* self);
bool QSharedMemory_Attach(QSharedMemory* self);
bool QSharedMemory_IsAttached(const QSharedMemory* self);
bool QSharedMemory_Detach(QSharedMemory* self);
void* QSharedMemory_Data(QSharedMemory* self);
const void* QSharedMemory_ConstData(const QSharedMemory* self);
const void* QSharedMemory_Data2(const QSharedMemory* self);
bool QSharedMemory_Lock(QSharedMemory* self);
bool QSharedMemory_Unlock(QSharedMemory* self);
int QSharedMemory_Error(const QSharedMemory* self);
libqt_string QSharedMemory_ErrorString(const QSharedMemory* self);
bool QSharedMemory_Create2(QSharedMemory* self, ptrdiff_t size, int mode);
bool QSharedMemory_Attach1(QSharedMemory* self, int mode);
void QSharedMemory_OnMetaObject(const QSharedMemory* self, intptr_t slot);
QMetaObject* QSharedMemory_SuperMetaObject(const QSharedMemory* self);
void QSharedMemory_OnMetacast(QSharedMemory* self, intptr_t slot);
void* QSharedMemory_SuperMetacast(QSharedMemory* self, const char* param1);
void QSharedMemory_OnMetacall(QSharedMemory* self, intptr_t slot);
int QSharedMemory_SuperMetacall(QSharedMemory* self, int param1, int param2, void** param3);
bool QSharedMemory_Event(QSharedMemory* self, QEvent* event);
void QSharedMemory_OnEvent(QSharedMemory* self, intptr_t slot);
bool QSharedMemory_SuperEvent(QSharedMemory* self, QEvent* event);
bool QSharedMemory_EventFilter(QSharedMemory* self, QObject* watched, QEvent* event);
void QSharedMemory_OnEventFilter(QSharedMemory* self, intptr_t slot);
bool QSharedMemory_SuperEventFilter(QSharedMemory* self, QObject* watched, QEvent* event);
void QSharedMemory_TimerEvent(QSharedMemory* self, QTimerEvent* event);
void QSharedMemory_OnTimerEvent(QSharedMemory* self, intptr_t slot);
void QSharedMemory_SuperTimerEvent(QSharedMemory* self, QTimerEvent* event);
void QSharedMemory_ChildEvent(QSharedMemory* self, QChildEvent* event);
void QSharedMemory_OnChildEvent(QSharedMemory* self, intptr_t slot);
void QSharedMemory_SuperChildEvent(QSharedMemory* self, QChildEvent* event);
void QSharedMemory_CustomEvent(QSharedMemory* self, QEvent* event);
void QSharedMemory_OnCustomEvent(QSharedMemory* self, intptr_t slot);
void QSharedMemory_SuperCustomEvent(QSharedMemory* self, QEvent* event);
void QSharedMemory_ConnectNotify(QSharedMemory* self, const QMetaMethod* signal);
void QSharedMemory_OnConnectNotify(QSharedMemory* self, intptr_t slot);
void QSharedMemory_SuperConnectNotify(QSharedMemory* self, const QMetaMethod* signal);
void QSharedMemory_DisconnectNotify(QSharedMemory* self, const QMetaMethod* signal);
void QSharedMemory_OnDisconnectNotify(QSharedMemory* self, intptr_t slot);
void QSharedMemory_SuperDisconnectNotify(QSharedMemory* self, const QMetaMethod* signal);
QObject* QSharedMemory_Sender(const QSharedMemory* self);
void QSharedMemory_OnSender(const QSharedMemory* self, intptr_t slot);
QObject* QSharedMemory_SuperSender(const QSharedMemory* self);
int QSharedMemory_SenderSignalIndex(const QSharedMemory* self);
void QSharedMemory_OnSenderSignalIndex(const QSharedMemory* self, intptr_t slot);
int QSharedMemory_SuperSenderSignalIndex(const QSharedMemory* self);
int QSharedMemory_Receivers(const QSharedMemory* self, const char* signal);
void QSharedMemory_OnReceivers(const QSharedMemory* self, intptr_t slot);
int QSharedMemory_SuperReceivers(const QSharedMemory* self, const char* signal);
bool QSharedMemory_IsSignalConnected(const QSharedMemory* self, const QMetaMethod* signal);
void QSharedMemory_OnIsSignalConnected(const QSharedMemory* self, intptr_t slot);
bool QSharedMemory_SuperIsSignalConnected(const QSharedMemory* self, const QMetaMethod* signal);
void QSharedMemory_Delete(QSharedMemory* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif